# svm-fhe

./: .gitignore  .gitmodules  Cargo.toml  README.md  clean_db.sh  clean_keys.sh  generate.sh  run.sh  tsconfig.json
.cursor/rules/: color-syntax.mdc
blockchain/: .gitignore  Anchor.toml  package-lock.json  package.json
blockchain/programs/blockchain/: Cargo.toml
blockchain/programs/blockchain/src/: lib.rs  operations.rs
blockchain/programs/operations/: Cargo.toml
blockchain/programs/operations/src/: lib.rs
blockchain/tests/: after-test.ts  blockchain.ts
docs/: apis.md  improved-setup.md  setup.md
elizaos-plugin/: README.md  fhe-assistant.character.json  package-lock.json  package.json  test-fhe.js  tsconfig.json
elizaos-plugin/src/: index.ts
elizaos-plugin/src/actions/: fheActions.ts
elizaos-plugin/src/services/: telegramService.ts
fhe-lib/programs/app/src/: lib.rs
fhe-lib/programs/fhe-lib/: Cargo.toml
fhe-lib/programs/fhe-lib/src/: lib.rs
fhe-lib/programs/fhe-lib/src/utils/: events.rs  fhe_types.rs  internals.rs  mod.rs
fhe-lib/tests/: app.ts  fhe-lib.ts
listner/: fhe.ts  listner.ts  package-lock.json  package.json  relayer.ts  test.ts  tsconfig.json
relayer/: Cargo.toml
relayer/src/: main.rs
relayer/src/api/: transfer.rs
relayer/src/listener/: utils.rs
src/: cache.rs  db_test.rs  handlers.rs  keys.rs  main.rs  operations.rs  rag.rs  types.rs  u64work.rs  working.rs
