[package]
name = "poc"
version = "0.1.0"
edition = "2021"
default-run = "poc"

[dependencies]
tfhe = { version = "0.11.1", features = ["boolean", "shortint", "integer"] }
bincode = "1.3.3"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.29.0", features = ["bundled"] } 
tokio-rusqlite = "0.4.0"
primitive-types = "0.12.1"
async-trait = "0.1"

[[bin]]
name = "keys"
path = "src/keys.rs"