[package]
name = "solana-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-account-decoder = "1.18.26"
solana-transaction-status = "1.18.26"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
futures-util = "0.3.31"
async-trait = "0.1.88"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9.1", features = ["json"] }