[package]
name = "fhe-lib"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/kkoshiya"]
description = "A library for FHE operations on Solana"


[lib]
crate-type = ["cdylib", "lib"]
name = "fhe_lib"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
proc-macro2 = "=1.0.67"

